--- a/react-notes-app/src/index.css
+++ b/react-notes-app/src/index.css
@@ -36,6 +36,32 @@ code {
   }
 }
 
+.note.new {
+  background-color: #67d7cc;
+
+  & textarea {
+    border: none;
+    resize: none;
+    background-color: #67d7cc;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  & .save {
+    background-color: #e1e1e1;
+    border: none;
+    border-radius: 15px;
+    padding: 5px 10px;
+
+    &:hover {
+      background-color: #ededed;
+      cursor: pointer;
+    }
+  }
+}
+
 .notes-list {
   display: grid;
   gap: 1rem;
