--- a/react-notes-app/src/index.css
+++ b/react-notes-app/src/index.css
@@ -29,6 +29,8 @@ code {
   flex-direction: column;
   justify-content: space-between;
 
+  white-space: pre-wrap;
+
   & .note-footer {
     display: flex;
     align-items: center;
