--- a/react-notes-app/src/index.css
+++ b/react-notes-app/src/index.css
@@ -73,3 +73,21 @@ code {
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  background-color: rgb(233, 233, 233);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 1.5em;
+
+  & input {
+    border: none;
+    background-color: rgb(233, 233, 233);
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
