--- a/react-notes-app/src/index.css
+++ b/react-notes-app/src/index.css
@@ -17,6 +17,7 @@ code {
   margin-right: auto;
   margin-left: auto;
   padding: 0px 15px;
+  min-height: 100vh;
 }
 
 .note {
@@ -89,5 +90,31 @@ code {
     &:focus {
       outline: none;
     }
+  }
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  & .save {
+    background-color: #e1e1e1;
+    border: none;
+    border-radius: 15px;
+    padding: 5px 10px;
+
+    &:hover {
+      background-color: #ededed;
+      cursor: pointer;
+    }
+  }
+}
+
+.dark-mode {
+  background-color: black;
+
+  & h1 {
+    color: white;
   }
 }
